<resources>
    <string name="app_name">UTS-RPL</string>
    <string name="logouns"></string>
    <string name="nama_kelompok">KELOMPOK 1C RPL</string>
    <string name="anggota_1">V3421068 - Nadia Elia M.</string>
    <string name="anggota_2">V3421080 - Renna Aprilia</string>
    <string name="anggota_3">V3421087 - Septian Adi P.</string>
    <string name="anggota_4">V3421093 - Xyla Syarifatuzzahra</string>
    <string name="anggota_5">V3421094 - Yoga Ernowibowo</string>
    <string name="btn_next">Next</string>

    <string name="daftar">Anggota Kelompok 6</string>
    <string name="btn_nadia">Nadia Elia Maharani</string>
    <string name="btn_renna">Renna Aprilia</string>
    <string name="btn_septian">Septian Adi Pamungkas</string>
    <string name="btn_xyla">Xyla Syarifatuzzahra</string>
    <string name="btn_yoga">Yoga Ernowibowo</string>

    <string name="foto_1"></string>
    <string name="nama_1">Nadia Elia Maharani</string>
    <string name="prodi_1">Teknik Informatika</string>
    <string name="nim_1">V3421068</string>
    <string name="alamat_1">Surakarta, Jawa Tengah</string>
    <string name="email_1">nadiaeliamaharani@gmail.com</string>

    <string name="foto_2"></string>
    <string name="nama_2">Renna Aprilia</string>
    <string name="prodi_2">Teknik Informatika</string>
    <string name="nim_2">V3421080</string>
    <string name="alamat_2">Depok, Jawa Barat</string>
    <string name="email_2">rennaaprilia@gmail.com</string>
    
    <string name="foto_3"></string>
    <string name="nama_3">Septian Adi Pamungkas</string>
    <string name="prodi_3">Teknik Informatika</string>
    <string name="nim_3">V3421087</string>
    <string name="alamat_3">Matesih, Karanganyar, Jawa Tengah</string>
    <string name="email_3">adipamungkas141@student.uns.ac.id</string>
    
    <string name="foto_4"></string>
    <string name="nama_4">Xyla Syarifatuzzahra A</string>
    <string name="prodi_4">Teknik Informatika</string>
    <string name="nim_4">V3421093</string>
    <string name="alamat_4">Pacitan</string>
    <string name="email_4">xylaa27@student.uns.ac.id</string>
    
    <string name="foto_5"></string>
    <string name="nama_5">Yoga Erno Wibowo</string>
    <string name="prodi_5">Teknik Informatika</string>
    <string name="nim_5">V3421094</string>
    <string name="alamat_5">Pacitan</string>
    <string name="email_5">yogaerno77@student.uns.ac.id</string>
    
</resources>
