<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListAnggota">

    <TextView
        android:id="@+id/daftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/daftar"
        android:textColor="#0C0C0C"
        android:textSize="40sp" />

    <Button
        android:id="@+id/btn_nadia"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/btn_nadia" />

    <Button
        android:id="@+id/btn_renna"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/btn_renna" />

    <Button
        android:id="@+id/btn_septian"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/btn_septian" />

    <Button
        android:id="@+id/btn_xyla"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/btn_xyla" />

    <Button
        android:id="@+id/btn_yoga"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/btn_yoga" />
</LinearLayout>