<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="40dp"
    android:layout_marginTop="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginBottom="40dp"
    android:orientation="vertical"
    tools:context=".Anggota1">

    <ImageView
        android:id="@+id/foto"
        android:layout_width="211dp"
        android:layout_height="184dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/foto_1"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/nama_1"
        android:textColor="#090909"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/prodi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/prodi_1"
        android:textColor="#090909"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/nim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/nim_1"
        android:textColor="#090909"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/alamat_1"
        android:textColor="#090909"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/email_1"
        android:textColor="#070707"
        android:textSize="24sp" />

</LinearLayout>